--- a/generate_synthetic_datasets.ipynb
+++ b/generate_synthetic_datasets.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -14,6 +16,15 @@
     "\n",
     "from src.utility import *"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -176,7 +187,7 @@
     "lengths = np.random.uniform(low=join_length[0], high=join_length[1], size=(num_tasks, dof))\n",
     "metadata_df = pd.DataFrame(lengths, columns=metadata_colnames)\n",
     "metadata_df[\"_task\"] = np.arange(num_tasks)\n",
-    "metadata_df[\"_task_name\"] = metadata_df[\"_task\"]\n",
+    "metadata_df[\"_task_name\"] = metadata_df[\"_task\", \n",
     "\n",
     "shp = (num_tasks*num_instances_per_task,)\n",
     "angles = np.stack([np.random.uniform(low=-np.pi, high=0, size=shp),\n",
